Amlogic-no: update linux config to 5.15.119

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.15.78 Kernel Configuration
+# Linux/arm64 5.15.119 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-13.2.0 (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -15,8 +15,10 @@ CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
+CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
+CONFIG_PAHOLE_VERSION=0
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -96,6 +98,7 @@ CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
 # CONFIG_BPF_UNPRIV_DEFAULT_OFF is not set
 # CONFIG_BPF_PRELOAD is not set
+# CONFIG_BPF_LSM is not set
 # end of BPF subsystem
 
 # CONFIG_PREEMPT_NONE is not set
@@ -117,18 +120,17 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
-# CONFIG_PSI_DEFAULT_DISABLED is not set
+# CONFIG_PSI is not set
 # end of CPU/Task time and stats accounting
 
-CONFIG_CPU_ISOLATION=y
+# CONFIG_CPU_ISOLATION is not set
 
 #
 # RCU Subsystem
 #
 CONFIG_TREE_RCU=y
 CONFIG_PREEMPT_RCU=y
-CONFIG_RCU_EXPERT=y
+# CONFIG_RCU_EXPERT is not set
 CONFIG_SRCU=y
 CONFIG_TREE_SRCU=y
 CONFIG_TASKS_RCU_GENERIC=y
@@ -137,12 +139,6 @@ CONFIG_TASKS_RUDE_RCU=y
 CONFIG_TASKS_TRACE_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_NEED_SEGCBLIST=y
-CONFIG_RCU_FANOUT=64
-CONFIG_RCU_FANOUT_LEAF=16
-CONFIG_RCU_FAST_NO_HZ=y
-# CONFIG_RCU_BOOST is not set
-CONFIG_RCU_NOCB_CPU=y
-# CONFIG_TASKS_TRACE_RCU_READ_MB is not set
 # end of RCU Subsystem
 
 CONFIG_IKCONFIG=m
@@ -150,8 +146,8 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_IKHEADERS=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
-CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=14
-CONFIG_PRINTK_INDEX=y
+CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
+# CONFIG_PRINTK_INDEX is not set
 CONFIG_GENERIC_SCHED_CLOCK=y
 
 #
@@ -257,7 +253,7 @@ CONFIG_SLUB_DEBUG=y
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
-# CONFIG_SLAB_MERGE_DEFAULT is not set
+CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
 # CONFIG_SHUFFLE_PAGE_ALLOCATOR is not set
@@ -405,7 +401,7 @@ CONFIG_HW_PERF_EVENTS=y
 CONFIG_CC_HAVE_SHADOW_CALL_STACK=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
-CONFIG_KEXEC=y
+# CONFIG_KEXEC is not set
 # CONFIG_KEXEC_FILE is not set
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_XEN is not set
@@ -545,9 +541,9 @@ CONFIG_DT_IDLE_STATES=y
 #
 # ARM CPU Idle Drivers
 #
-# CONFIG_ARM_CPUIDLE is not set
+CONFIG_ARM_CPUIDLE=y
 CONFIG_ARM_PSCI_CPUIDLE=y
-# CONFIG_ARM_PSCI_CPUIDLE_DOMAIN is not set
+CONFIG_ARM_PSCI_CPUIDLE_DOMAIN=y
 # end of ARM CPU Idle Drivers
 # end of CPU Idle
 
@@ -558,7 +554,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
-# CONFIG_CPU_FREQ_TIMES is not set
+CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -577,6 +573,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 #
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPUFREQ_DUMMY is not set
+CONFIG_ARM_SCPI_CPUFREQ=y
 # end of CPU Frequency scaling
 # end of CPU Power Management
 
@@ -608,11 +605,12 @@ CONFIG_CRYPTO_POLY1305_NEON=y
 # General architecture-dependent options
 #
 CONFIG_CRASH_CORE=y
-CONFIG_KEXEC_CORE=y
-# CONFIG_KPROBES is not set
+CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
+CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
+CONFIG_KRETPROBES=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_FUNCTION_ERROR_INJECTION=y
@@ -740,26 +738,9 @@ CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 #
 # Partition Types
 #
-CONFIG_PARTITION_ADVANCED=y
-# CONFIG_ACORN_PARTITION is not set
-# CONFIG_AIX_PARTITION is not set
-# CONFIG_OSF_PARTITION is not set
-# CONFIG_AMIGA_PARTITION is not set
-# CONFIG_ATARI_PARTITION is not set
-# CONFIG_MAC_PARTITION is not set
+# CONFIG_PARTITION_ADVANCED is not set
 CONFIG_MSDOS_PARTITION=y
-# CONFIG_BSD_DISKLABEL is not set
-# CONFIG_MINIX_SUBPARTITION is not set
-# CONFIG_SOLARIS_X86_PARTITION is not set
-# CONFIG_UNIXWARE_DISKLABEL is not set
-# CONFIG_LDM_PARTITION is not set
-# CONFIG_SGI_PARTITION is not set
-# CONFIG_ULTRIX_PARTITION is not set
-# CONFIG_SUN_PARTITION is not set
-# CONFIG_KARMA_PARTITION is not set
 CONFIG_EFI_PARTITION=y
-# CONFIG_SYSV68_PARTITION is not set
-# CONFIG_CMDLINE_PARTITION is not set
 # end of Partition Types
 
 CONFIG_BLOCK_COMPAT=y
@@ -772,7 +753,7 @@ CONFIG_BLOCK_HOLDER_DEPRECATED=y
 #
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
-CONFIG_IOSCHED_BFQ=y
+# CONFIG_IOSCHED_BFQ is not set
 # end of IO Schedulers
 
 CONFIG_ASN1=y
@@ -882,9 +863,7 @@ CONFIG_ARCH_HAS_IOREMAP_PHYS_HOOKS=y
 #
 # Data Access Monitoring
 #
-CONFIG_DAMON=y
-# CONFIG_DAMON_VADDR is not set
-# CONFIG_DAMON_PADDR is not set
+# CONFIG_DAMON is not set
 # end of Data Access Monitoring
 
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
@@ -946,6 +925,7 @@ CONFIG_INET_ESP=m
 # CONFIG_INET_ESP_OFFLOAD is not set
 # CONFIG_INET_ESPINTCP is not set
 # CONFIG_INET_IPCOMP is not set
+CONFIG_INET_TABLE_PERTURB_ORDER=16
 CONFIG_INET_TUNNEL=m
 CONFIG_INET_DIAG=m
 CONFIG_INET_TCP_DIAG=m
@@ -1262,7 +1242,6 @@ CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_VLAN_8021Q=m
 # CONFIG_VLAN_8021Q_GVRP is not set
 # CONFIG_VLAN_8021Q_MVRP is not set
-# CONFIG_DECNET is not set
 CONFIG_LLC=m
 # CONFIG_LLC2 is not set
 # CONFIG_ATALK is not set
@@ -1313,7 +1292,6 @@ CONFIG_NET_SCH_INGRESS=y
 #
 CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_BASIC is not set
-# CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
 CONFIG_NET_CLS_U32=y
@@ -1581,7 +1559,8 @@ CONFIG_PCI_ENDPOINT=y
 #
 # Generic Driver Options
 #
-# CONFIG_UEVENT_HELPER is not set
+CONFIG_UEVENT_HELPER=y
+CONFIG_UEVENT_HELPER_PATH=""
 CONFIG_DEVTMPFS=y
 # CONFIG_DEVTMPFS_MOUNT is not set
 CONFIG_STANDALONE=y
@@ -1808,7 +1787,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
-# CONFIG_BLK_DEV_SX8 is not set
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_BLK_DEV_RAM_SIZE=8192
@@ -1955,6 +1933,7 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_SCSI_HISI_SAS is not set
 # CONFIG_SCSI_MVSAS is not set
 # CONFIG_SCSI_MVUMI is not set
+# CONFIG_SCSI_DPT_I2O is not set
 # CONFIG_SCSI_ADVANSYS is not set
 # CONFIG_SCSI_ARCMSR is not set
 # CONFIG_SCSI_ESAS2R is not set
@@ -4153,7 +4132,7 @@ CONFIG_DRM_GEM_SHMEM_HELPER=y
 # CONFIG_DRM_AST is not set
 # CONFIG_DRM_MGAG200 is not set
 # CONFIG_DRM_RCAR_DW_HDMI is not set
-# CONFIG_DRM_RCAR_LVDS is not set
+# CONFIG_DRM_RCAR_USE_LVDS is not set
 # CONFIG_DRM_QXL is not set
 # CONFIG_DRM_VIRTIO_GPU is not set
 CONFIG_DRM_PANEL=y
@@ -4270,7 +4249,6 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_HISI_KIRIN is not set
-# CONFIG_DRM_MXSFB is not set
 # CONFIG_DRM_MESON is not set
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_BOCHS is not set
@@ -5492,7 +5470,7 @@ CONFIG_COMMON_CLK=y
 
 # CONFIG_LMK04832 is not set
 # CONFIG_COMMON_CLK_MAX9485 is not set
-# CONFIG_COMMON_CLK_SCPI is not set
+CONFIG_COMMON_CLK_SCPI=y
 # CONFIG_COMMON_CLK_SI5341 is not set
 # CONFIG_COMMON_CLK_SI5351 is not set
 # CONFIG_COMMON_CLK_SI514 is not set
@@ -6312,6 +6290,9 @@ CONFIG_AMLOGIC_COMMON_CLK_S5=y
 # CONFIG_AMLOGIC_COMMON_CLK_TXHD2 is not set
 # CONFIG_AMLOGIC_COMMON_AO_CLK_TXHD2 is not set
 # CONFIG_AMLOGIC_COMMON_CLK_C1 is not set
+# CONFIG_AMLOGIC_COMMON_CLK_S1A is not set
+# CONFIG_AMLOGIC_COMMON_CLK_T5D is not set
+# CONFIG_AMLOGIC_COMMON_AO_CLK_T5D is not set
 # end of Clock support for Amlogic platforms
 
 CONFIG_AMLOGIC_SECMON=y
@@ -6319,8 +6300,8 @@ CONFIG_AMLOGIC_SECMON=y
 CONFIG_AMLOGIC_DRM=y
 CONFIG_AMLOGIC_DRM_VPU=y
 CONFIG_AMLOGIC_DRM_HDMI=y
-CONFIG_AMLOGIC_DRM_CVBS=y
-CONFIG_AMLOGIC_DRM_PANEL=y
+# CONFIG_AMLOGIC_DRM_CVBS is not set
+# CONFIG_AMLOGIC_DRM_PANEL is not set
 CONFIG_AMLOGIC_DRM_USE_ION=y
 CONFIG_AMLOGIC_DRM_EMULATE_FBDEV=y
 
@@ -6493,7 +6474,7 @@ CONFIG_AMLOGIC_HDMITX=y
 
 CONFIG_AMLOGIC_CVBS_OUTPUT=y
 CONFIG_AMLOGIC_WSS=y
-# CONFIG_AML_VOUT_CC_BYPASS is not set
+CONFIG_AMLOGIC_VOUT_CC_BYPASS=y
 CONFIG_AMLOGIC_VDAC=y
 # end of Amlogic Vout Driver Support
 
@@ -6627,6 +6608,12 @@ CONFIG_AMLOGIC_VIDEO_COMPOSER=y
 #
 CONFIG_AMLOGIC_VIDEO_PP_COMMON=y
 # end of Amlogic video_pp_common support
+
+#
+# Amlogic di_process support
+#
+CONFIG_AMLOGIC_DI_PROCESS=y
+# end of Amlogic di_process support
 # end of Amlogic Video Processor Support
 
 #
@@ -6669,13 +6656,14 @@ CONFIG_AMLOGIC_MEDIA_VIN=y
 CONFIG_AMLOGIC_MEDIA_TVIN=y
 CONFIG_AMLOGIC_MEDIA_VDIN=y
 CONFIG_AMLOGIC_MEDIA_TVIN_AFE=y
-# CONFIG_ADC_DOUBLE_SAMPLING_FOR_CVBS is not set
+# CONFIG_AMLOGIC_ADC_DOUBLE_SAMPLING_FOR_CVBS is not set
 CONFIG_AMLOGIC_MEDIA_TVIN_VBI=y
 CONFIG_AMLOGIC_MEDIA_TVIN_AVDETECT=y
 CONFIG_AMLOGIC_MEDIA_VIUIN=y
 CONFIG_AMLOGIC_MEDIA_TVIN_BT656=y
 # CONFIG_AMLOGIC_MEDIA_TVIN_CSI is not set
 CONFIG_AMLOGIC_MEDIA_TVIN_HDMI=y
+# CONFIG_AMLOGIC_MEDIA_TVIN_DSC_DEC is not set
 # CONFIG_AMLOGIC_TVIN_USE_DEBUG_FILE is not set
 CONFIG_AMLOGIC_MEDIA_ADC=y
 # end of Input drivers
@@ -6711,6 +6699,11 @@ CONFIG_AMLOGIC_MEDIA_FRC=y
 #
 CONFIG_AMLOGIC_DI_V4L=y
 # end of Amlogic di v4l support
+
+#
+# DI_MINI driver
+#
+# end of DI_MINI driver
 # end of Amlogic multimedia configuration
 
 CONFIG_AMLOGIC_POWER=y
@@ -6746,6 +6739,8 @@ CONFIG_AMLOGIC_PINCTRL_MESON_S5=y
 # CONFIG_AMLOGIC_PINCTRL_MESON_T3X is not set
 # CONFIG_AMLOGIC_PINCTRL_MESON_TXHD2 is not set
 # CONFIG_AMLOGIC_PINCTRL_MESON_C1 is not set
+# CONFIG_AMLOGIC_PINCTRL_MESON_S1A is not set
+# CONFIG_AMLOGIC_PINCTRL_MESON_T5D is not set
 # CONFIG_AMLOGIC_GPIO_PMIC is not set
 CONFIG_AMLOGIC_INPUT=m
 # CONFIG_AMLOGIC_GPIO_KEY is not set
@@ -6766,13 +6761,14 @@ CONFIG_AMLOGIC_SPI_MESON_SPICC_V2=y
 CONFIG_AMLOGIC_SPI_MESON_SPIFC=y
 CONFIG_AMLOGIC_SPI_MESON_SPIFC_V2=y
 # CONFIG_AMLOGIC_SPI_MESON_SPICC_SLAVE is not set
+# CONFIG_AMLOGIC_SPI_NFC is not set
 CONFIG_AMLOGIC_TEE=y
-CONFIG_AML_TEE=y
+CONFIG_AMLOGIC_AMLTEE=y
 
 #
 # TEE drivers
 #
-CONFIG_AML_OPTEE=y
+CONFIG_AMLOGIC_OPTEE=y
 # end of TEE drivers
 
 CONFIG_AMLOGIC_GKI_TOOL=m
@@ -6783,7 +6779,13 @@ CONFIG_AMLOGIC_EFUSE=y
 CONFIG_AMLOGIC_UNIFYKEY=y
 # CONFIG_AMLOGIC_EFUSE_BURN is not set
 CONFIG_AMLOGIC_DEFENDKEY=y
+
+#
+# MESON MHU mailbox Support
+#
 CONFIG_AMLOGIC_MHU_MBOX=y
+# end of MESON MHU mailbox Support
+
 CONFIG_AMLOGIC_JTAG_MESON=y
 
 #
@@ -6828,6 +6830,7 @@ CONFIG_AMLOGIC_DDR_BANDWIDTH_S5=y
 # CONFIG_AMLOGIC_DDR_BANDWIDTH_C3 is not set
 # CONFIG_AMLOGIC_DDR_BANDWIDTH_T5M is not set
 # CONFIG_AMLOGIC_DDR_BANDWIDTH_TXHD2 is not set
+# CONFIG_AMLOGIC_DDR_BANDWIDTH_S1A is not set
 CONFIG_AMLOGIC_DMC_MONITOR=y
 CONFIG_AMLOGIC_DMC_DEV_ACCESS=y
 CONFIG_AMLOGIC_DMC_MONITOR_G12=y
@@ -6840,6 +6843,7 @@ CONFIG_AMLOGIC_DMC_MONITOR_S4=y
 CONFIG_AMLOGIC_DMC_MONITOR_S5=y
 # CONFIG_AMLOGIC_DMC_MONITOR_C3 is not set
 # CONFIG_AMLOGIC_DMC_MONITOR_T5M is not set
+# CONFIG_AMLOGIC_DMC_MONITOR_S1A is not set
 # CONFIG_AMLOGIC_DMC_MONITOR_TXHD2 is not set
 CONFIG_AMLOGIC_RAMDUMP=y
 # end of Meson core memory debug driver
@@ -6848,7 +6852,6 @@ CONFIG_AMLOGIC_RAMDUMP=y
 # Analog to digital converters
 #
 CONFIG_AMLOGIC_MESON_SARADC=y
-CONFIG_AMLOGIC_IIO_KFIFO_BUF=y
 # end of Analog to digital converters
 
 #
@@ -6884,11 +6887,12 @@ CONFIG_AMLOGIC_CPUCORE_THERMAL=y
 CONFIG_AMLOGIC_GPU_THERMAL=y
 CONFIG_AMLOGIC_GPUCORE_THERMAL=y
 CONFIG_AMLOGIC_DDR_THERMAL=y
+CONFIG_AMLOGIC_MEDIA_THERMAL=y
 # end of Amlogic Thermal and Cooling devices
 
 CONFIG_AMLOGIC_MMC_MESON_GX=y
 CONFIG_AMLOGIC_MMC_CQHCI=y
-CONFIG_AMLOGIC_HIFI4DSP=y
+CONFIG_AMLOGIC_HOST_DRIVER=y
 CONFIG_AMLOGIC_DEBUG=y
 CONFIG_AMLOGIC_BGKI_DEBUG_MISC=y
 CONFIG_AMLOGIC_DEBUG_ATRACE=y
@@ -6902,12 +6906,15 @@ CONFIG_AMLOGIC_DEBUG_FILE=y
 CONFIG_AMLOGIC_AUDIO_UTILS=y
 CONFIG_AMLOGIC_GKI_CONFIG=y
 # CONFIG_AMLOGIC_ENV_DEBUG is not set
+# CONFIG_AMLOGIC_ZAPPER_NET_CUT is not set
 # CONFIG_AMLOGIC_ZAPPER_CUT is not set
+# CONFIG_AMLOGIC_ZAPPER_CUT_C1A is not set
 # CONFIG_AMLOGIC_REMOVE_OLD is not set
 # CONFIG_AMLOGIC_DEBUG_IOTRACE is not set
 # CONFIG_AMLOGIC_ARMV8_AARCH32 is not set
 # CONFIG_AMLOGIC_APU is not set
 # CONFIG_AMLOGIC_BGKI_SCHED_SYSCTL is not set
+# CONFIG_AMLOGIC_DEBUG_ISOLCPUS is not set
 CONFIG_AMLOGIC_MEDIA_CAMERA=y
 # CONFIG_AMLOGIC_FREERTOS is not set
 # CONFIG_AMLOGIC_AUTO_CAPTURE is not set
@@ -6941,6 +6948,7 @@ CONFIG_AMLOGIC_PWM_32K=y
 CONFIG_AMLOGIC_MDIO_G12A=y
 CONFIG_AMLOGIC_INPHY=y
 CONFIG_AMLOGIC_LINUX_BT_SMP=y
+CONFIG_AMLOGIC_LINUX_BT_SUPPORT_WAKEUP=y
 CONFIG_AMLOGIC_MTD_SPI_NAND=y
 CONFIG_AMLOGIC_MTD_NAND=y
 CONFIG_AMLOGIC_MTD_COMMON=y
@@ -6953,7 +6961,6 @@ CONFIG_AMLOGIC_DVB_COMPAT=y
 CONFIG_AMLOGIC_AUCPU=y
 # CONFIG_AMLOGIC_SMARTCARD is not set
 CONFIG_AMLOGIC_DVB_DMX=m
-# CONFIG_AMLOGIC_CPUIDLE is not set
 
 #
 # Amlogic PCI Support
@@ -6969,6 +6976,7 @@ CONFIG_AMLOGIC_LED=y
 # CONFIG_AMLOGIC_LEDS_AW9523B is not set
 # CONFIG_AMLOGIC_LEDS_STATE is not set
 # CONFIG_AMLOGIC_LEDS_DCON is not set
+# CONFIG_AMLOGIC_LEDS_FD650 is not set
 CONFIG_AMLOGIC_LEDS_BCT3236=y
 
 #
@@ -7047,7 +7055,6 @@ CONFIG_AMLOGIC_SND_SOC_PA1=y
 # CONFIG_AMLOGIC_SND_SOC_TAS5782M is not set
 CONFIG_AMLOGIC_SND_SOC_TAS5707=y
 # CONFIG_AMLOGIC_SND_SOC_TLV320ADC3101 is not set
-CONFIG_CONFIG_AMLOGIC_SND_SOC_TAS5707=y
 CONFIG_AMLOGIC_SND_SOC_PCM186X=y
 CONFIG_AMLOGIC_SND_SOC_SSM3525=y
 CONFIG_AMLOGIC_SND_SOC_SSM3515=y
@@ -7958,7 +7965,12 @@ CONFIG_FTRACE_SYSCALLS=y
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
-# CONFIG_UPROBE_EVENTS is not set
+CONFIG_KPROBE_EVENTS=y
+# CONFIG_KPROBE_EVENTS_ON_NOTRACE is not set
+CONFIG_UPROBE_EVENTS=y
+CONFIG_BPF_EVENTS=y
+CONFIG_DYNAMIC_EVENTS=y
+CONFIG_PROBE_EVENTS=y
 CONFIG_FTRACE_MCOUNT_RECORD=y
 CONFIG_FTRACE_MCOUNT_USE_PATCHABLE_FUNCTION_ENTRY=y
 # CONFIG_SYNTH_EVENTS is not set
@@ -7972,6 +7984,7 @@ CONFIG_FTRACE_MCOUNT_USE_PATCHABLE_FUNCTION_ENTRY=y
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_VALIDATE_TIME_DELTAS is not set
 # CONFIG_PREEMPTIRQ_DELAY_TEST is not set
+# CONFIG_KPROBE_EVENT_GEN_TEST is not set
 # CONFIG_SAMPLES is not set
 # CONFIG_STRICT_DEVMEM is not set
 
@@ -7988,6 +8001,7 @@ CONFIG_FTRACE_MCOUNT_USE_PATCHABLE_FUNCTION_ENTRY=y
 #
 # CONFIG_KUNIT is not set
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
+# CONFIG_FUNCTION_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
 CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
@@ -7999,6 +8013,7 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_LKDTM is not set
 # CONFIG_TEST_MIN_HEAP is not set
 # CONFIG_TEST_DIV64 is not set
+# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_REED_SOLOMON_TEST is not set
