--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -4561,7 +4561,7 @@ CONFIG_USB_EHCI_PCI=y
 # USB Device Class drivers
 #
 CONFIG_USB_ACM=m
-# CONFIG_USB_PRINTER is not set
+CONFIG_USB_PRINTER=m
 CONFIG_USB_WDM=m
 # CONFIG_USB_TMC is not set
 
