--- a/packages/sysutils/busybox/system.d/restore-storage-permissions.service
+++ b/packages/sysutils/busybox/system.d/restore-storage-permissions.service
@@ -6,8 +6,8 @@ Before=sysinit.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/find /storage -maxdepth 1 -type d -user 1023 \
-            -exec /usr/bin/chown -R root:root {} \;
+ExecStart=-/usr/bin/chown root:root /storage
+ExecStart=-/bin/sh -c 'find /storage -mindepth 1 -maxdepth 1 \( -type d -o -type f \) \( -user 1023 -o -group 1023 \) -exec chown -R root:root {} \;'
 
 [Install]
 WantedBy=sysinit.target
