--- a/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
+++ b/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
@@ -263,7 +263,6 @@ CONFIG_PROFILING=y
 #
 # Kexec and crash features
 #
-CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
 CONFIG_KEXEC=y
 # CONFIG_KEXEC_FILE is not set
@@ -848,9 +847,8 @@ CONFIG_COREDUMP=y
 # CONFIG_SWAP is not set
 
 #
-# SLAB allocator options
+# Slab allocator options
 #
-# CONFIG_SLAB_DEPRECATED is not set
 CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
@@ -858,7 +856,7 @@ CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLUB_STATS is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_RANDOM_KMALLOC_CACHES is not set
-# end of SLAB allocator options
+# end of Slab allocator options
 
 # CONFIG_SHUFFLE_PAGE_ALLOCATOR is not set
 # CONFIG_COMPAT_BRK is not set
@@ -943,7 +941,6 @@ CONFIG_SKB_EXTENSIONS=y
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
 CONFIG_UNIX=y
-CONFIG_UNIX_SCM=y
 CONFIG_AF_UNIX_OOB=y
 # CONFIG_UNIX_DIAG is not set
 # CONFIG_TLS is not set
@@ -1241,6 +1238,7 @@ CONFIG_IP_VS_NFCT=y
 # IP: Netfilter Configuration
 #
 CONFIG_NF_DEFRAG_IPV4=m
+CONFIG_IP_NF_IPTABLES_LEGACY=m
 # CONFIG_NF_SOCKET_IPV4 is not set
 # CONFIG_NF_TPROXY_IPV4 is not set
 # CONFIG_NF_TABLES_IPV4 is not set
@@ -1308,7 +1306,6 @@ CONFIG_NF_DEFRAG_IPV6=m
 # CONFIG_NF_TABLES_BRIDGE is not set
 # CONFIG_NF_CONNTRACK_BRIDGE is not set
 # CONFIG_BRIDGE_NF_EBTABLES is not set
-# CONFIG_BPFILTER is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1494,10 +1491,8 @@ CONFIG_BT_QCOMSMD=m
 # CONFIG_MCTP is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=m
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
@@ -1544,6 +1539,7 @@ CONFIG_ETHTOOL_NETLINK=y
 #
 CONFIG_ARM_AMBA=y
 CONFIG_HAVE_PCI=y
+CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_DOMAINS_GENERIC=y
@@ -1595,7 +1591,6 @@ CONFIG_PCI_XGENE_MSI=y
 # Cadence-based PCIe controllers
 #
 # CONFIG_PCIE_CADENCE_PLAT_HOST is not set
-# CONFIG_PCI_J721E_HOST is not set
 # end of Cadence-based PCIe controllers
 
 #
@@ -1681,7 +1676,6 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 #
 # Bus devices
 #
-# CONFIG_BRCMSTB_GISB_ARB is not set
 # CONFIG_MOXTET is not set
 # CONFIG_QCOM_EBI2 is not set
 # CONFIG_QCOM_SSC_BLOCK_BUS is not set
@@ -1741,6 +1735,12 @@ CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_ARM_PSCI_CHECKER is not set
+
+#
+# Qualcomm firmware drivers
+#
+# end of Qualcomm firmware drivers
+
 CONFIG_HAVE_ARM_SMCCC=y
 CONFIG_HAVE_ARM_SMCCC_DISCOVERY=y
 CONFIG_ARM_SMCCC_SOC_ID=y
@@ -2325,6 +2325,7 @@ CONFIG_IGBVF=y
 # CONFIG_ICE is not set
 # CONFIG_FM10K is not set
 # CONFIG_IGC is not set
+# CONFIG_IDPF is not set
 # CONFIG_JME is not set
 # CONFIG_NET_VENDOR_ADI is not set
 # CONFIG_NET_VENDOR_LITEX is not set
@@ -2446,7 +2447,6 @@ CONFIG_NET_VENDOR_WIZNET=y
 # CONFIG_WIZNET_W5300 is not set
 CONFIG_NET_VENDOR_XILINX=y
 # CONFIG_XILINX_EMACLITE is not set
-# CONFIG_XILINX_AXI_EMAC is not set
 # CONFIG_XILINX_LL_TEMAC is not set
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
@@ -2509,6 +2509,7 @@ CONFIG_SMSC_PHY=m
 # CONFIG_DP83867_PHY is not set
 # CONFIG_DP83869_PHY is not set
 # CONFIG_DP83TD510_PHY is not set
+# CONFIG_DP83TG720_PHY is not set
 # CONFIG_VITESSE_PHY is not set
 # CONFIG_XILINX_GMII2RGMII is not set
 # CONFIG_MICREL_KS8995MA is not set
@@ -2609,8 +2610,6 @@ CONFIG_WCN36XX=m
 # CONFIG_ATH11K is not set
 # CONFIG_ATH12K is not set
 CONFIG_WLAN_VENDOR_ATMEL=y
-CONFIG_ATMEL=m
-# CONFIG_PCI_ATMEL is not set
 CONFIG_AT76C50X_USB=m
 # CONFIG_WLAN_VENDOR_BROADCOM is not set
 # CONFIG_WLAN_VENDOR_CISCO is not set
@@ -2630,7 +2629,6 @@ CONFIG_WLAN_VENDOR_MICROCHIP=y
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
-# CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_MAC80211_HWSIM is not set
 # CONFIG_VIRT_WIFI is not set
 # CONFIG_WAN is not set
@@ -2756,6 +2754,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_EXC3000 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GOODIX is not set
+# CONFIG_TOUCHSCREEN_GOODIX_BERLIN_I2C is not set
+# CONFIG_TOUCHSCREEN_GOODIX_BERLIN_SPI is not set
 # CONFIG_TOUCHSCREEN_HIDEEP is not set
 # CONFIG_TOUCHSCREEN_HYCON_HY46XX is not set
 # CONFIG_TOUCHSCREEN_HYNITRON_CSTXXX is not set
@@ -2890,7 +2890,6 @@ CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 CONFIG_VT_CONSOLE=y
 CONFIG_VT_CONSOLE_SLEEP=y
-CONFIG_HW_CONSOLE=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_UNIX98_PTYS=y
 CONFIG_LEGACY_PTYS=y
@@ -3171,6 +3170,7 @@ CONFIG_PTP_1588_CLOCK_OPTIONAL=y
 # CONFIG_PTP_1588_CLOCK_KVM is not set
 # CONFIG_PTP_1588_CLOCK_IDT82P33 is not set
 # CONFIG_PTP_1588_CLOCK_IDTCM is not set
+# CONFIG_PTP_1588_CLOCK_FC3W is not set
 # CONFIG_PTP_1588_CLOCK_MOCK is not set
 # CONFIG_PTP_1588_CLOCK_OCP is not set
 # end of PTP clock support
@@ -3605,6 +3605,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
+# CONFIG_REGULATOR_NETLINK_EVENTS is not set
 # CONFIG_REGULATOR_88PG86X is not set
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
@@ -3837,7 +3838,10 @@ CONFIG_VIDEOBUF2_VMALLOC=m
 #
 CONFIG_VIDEO_IR_I2C=y
 CONFIG_VIDEO_CAMERA_SENSOR=y
+# CONFIG_VIDEO_ALVIUM_CSI2 is not set
 # CONFIG_VIDEO_AR0521 is not set
+# CONFIG_VIDEO_GC0308 is not set
+# CONFIG_VIDEO_GC2145 is not set
 # CONFIG_VIDEO_HI556 is not set
 # CONFIG_VIDEO_HI846 is not set
 # CONFIG_VIDEO_HI847 is not set
@@ -3856,6 +3860,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_IMX415 is not set
 # CONFIG_VIDEO_MT9M001 is not set
 # CONFIG_VIDEO_MT9M111 is not set
+# CONFIG_VIDEO_MT9M114 is not set
 # CONFIG_VIDEO_MT9P031 is not set
 # CONFIG_VIDEO_MT9T112 is not set
 # CONFIG_VIDEO_MT9V011 is not set
@@ -3882,6 +3887,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_OV5675 is not set
 # CONFIG_VIDEO_OV5693 is not set
 # CONFIG_VIDEO_OV5695 is not set
+# CONFIG_VIDEO_OV64A40 is not set
 # CONFIG_VIDEO_OV6650 is not set
 # CONFIG_VIDEO_OV7251 is not set
 # CONFIG_VIDEO_OV7640 is not set
@@ -3904,6 +3910,12 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_ST_VGXY61 is not set
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_ET8EK8 is not set
+
+#
+# Camera ISPs
+#
+# CONFIG_VIDEO_THP7312 is not set
+# end of Camera ISPs
 
 #
 # Lens drivers
@@ -3974,6 +3986,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_TVP5150 is not set
 # CONFIG_VIDEO_TVP7002 is not set
 # CONFIG_VIDEO_TW2804 is not set
+# CONFIG_VIDEO_TW9900 is not set
 # CONFIG_VIDEO_TW9903 is not set
 # CONFIG_VIDEO_TW9906 is not set
 # CONFIG_VIDEO_TW9910 is not set
@@ -4044,8 +4057,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 #
 # Graphics support
 #
-CONFIG_VIDEO_CMDLINE=y
-CONFIG_VIDEO_NOMODESET=y
+CONFIG_VIDEO=y
 # CONFIG_AUXDISPLAY is not set
 CONFIG_DRM=y
 CONFIG_DRM_MIPI_DSI=y
@@ -4081,6 +4093,7 @@ CONFIG_DRM_I2C_SIL164=m
 # CONFIG_DRM_RADEON is not set
 # CONFIG_DRM_AMDGPU is not set
 # CONFIG_DRM_NOUVEAU is not set
+# CONFIG_DRM_XE is not set
 # CONFIG_DRM_VGEM is not set
 # CONFIG_DRM_VKMS is not set
 # CONFIG_DRM_VMWGFX is not set
@@ -4150,8 +4163,8 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_NOVATEK_NT35950 is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT36523 is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT36672A is not set
+# CONFIG_DRM_PANEL_NOVATEK_NT36672E is not set
 # CONFIG_DRM_PANEL_NOVATEK_NT39016 is not set
-# CONFIG_DRM_PANEL_MANTIX_MLAF057WE51 is not set
 # CONFIG_DRM_PANEL_OLIMEX_LCD_OLINUXINO is not set
 # CONFIG_DRM_PANEL_ORISETECH_OTA5601A is not set
 # CONFIG_DRM_PANEL_ORISETECH_OTM8009A is not set
@@ -4160,16 +4173,18 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM67191 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM68200 is not set
+# CONFIG_DRM_PANEL_RAYDIUM_RM692E5 is not set
 # CONFIG_DRM_PANEL_RONBO_RB070D30 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S6E88A0_AMS452EF01 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_ATNA33XC20 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_DB7430 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_LD9040 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D16D0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D27A1 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D7AA0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E3HA2 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E63J0X03 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E63M0 is not set
-# CONFIG_DRM_PANEL_SAMSUNG_S6E88A0_AMS452EF01 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E8AA0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_SOFEF00 is not set
 # CONFIG_DRM_PANEL_SEIKO_43WVF1G is not set
@@ -4184,14 +4199,17 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_SONY_TD4353_JDI is not set
 # CONFIG_DRM_PANEL_SONY_TULIP_TRULY_NT35521 is not set
 # CONFIG_DRM_PANEL_STARTEK_KD070FHFID015 is not set
+CONFIG_DRM_PANEL_EDP=y
+CONFIG_DRM_PANEL_SIMPLE=y
+# CONFIG_DRM_PANEL_SYNAPTICS_R63353 is not set
 # CONFIG_DRM_PANEL_TDO_TL070WSH30 is not set
 # CONFIG_DRM_PANEL_TPO_TD028TTEC1 is not set
 # CONFIG_DRM_PANEL_TPO_TD043MTEA1 is not set
 # CONFIG_DRM_PANEL_TPO_TPG110 is not set
 # CONFIG_DRM_PANEL_TRULY_NT35597_WQXGA is not set
+# CONFIG_DRM_PANEL_VISIONOX_R66451 is not set
 # CONFIG_DRM_PANEL_VISIONOX_RM69299 is not set
 # CONFIG_DRM_PANEL_VISIONOX_VTDR6130 is not set
-# CONFIG_DRM_PANEL_VISIONOX_R66451 is not set
 # CONFIG_DRM_PANEL_WIDECHIPS_WS2401 is not set
 # CONFIG_DRM_PANEL_XINPENG_XPP055C272 is not set
 # end of Display Panels
@@ -4270,7 +4288,6 @@ CONFIG_DRM_I2C_ADV7511_CEC=y
 # CONFIG_DRM_TIDSS is not set
 # CONFIG_DRM_GUD is not set
 # CONFIG_DRM_SSD130X is not set
-# CONFIG_DRM_LEGACY is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 
 #
@@ -4326,7 +4343,7 @@ CONFIG_FB_SYS_FILLRECT=y
 CONFIG_FB_SYS_COPYAREA=y
 CONFIG_FB_SYS_IMAGEBLIT=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
-CONFIG_FB_SYS_FOPS=y
+CONFIG_FB_SYSMEM_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
 CONFIG_FB_SYSMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS_DEFERRED=y
@@ -4340,6 +4357,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_KTD253 is not set
+# CONFIG_BACKLIGHT_KTD2801 is not set
 # CONFIG_BACKLIGHT_KTZ8866 is not set
 # CONFIG_BACKLIGHT_PWM is not set
 # CONFIG_BACKLIGHT_QCOM_WLED is not set
@@ -4564,6 +4582,8 @@ CONFIG_SND_SOC_AK4613=y
 # CONFIG_SND_SOC_AW8738 is not set
 # CONFIG_SND_SOC_AW88395 is not set
 # CONFIG_SND_SOC_AW88261 is not set
+# CONFIG_SND_SOC_AW87390 is not set
+# CONFIG_SND_SOC_AW88399 is not set
 # CONFIG_SND_SOC_BD28623 is not set
 # CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CHV3_CODEC is not set
@@ -4856,6 +4876,7 @@ CONFIG_SONY_FF=y
 # CONFIG_HID_ZYDACRON is not set
 # CONFIG_HID_SENSOR_HUB is not set
 # CONFIG_HID_ALPS is not set
+# CONFIG_HID_MCP2200 is not set
 # CONFIG_HID_MCP2221 is not set
 # end of Special HID drivers
 
@@ -4901,6 +4922,7 @@ CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_FSM is not set
 # CONFIG_USB_LEDS_TRIGGER_USBPORT is not set
 CONFIG_USB_AUTOSUSPEND_DELAY=2
+CONFIG_USB_DEFAULT_AUTHORIZATION_MODE=1
 # CONFIG_USB_MON is not set
 
 #
@@ -5002,6 +5024,7 @@ CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
 CONFIG_USB_CHIPIDEA_MSM=y
+CONFIG_USB_CHIPIDEA_NPCM=y
 CONFIG_USB_CHIPIDEA_IMX=y
 CONFIG_USB_CHIPIDEA_GENERIC=y
 CONFIG_USB_CHIPIDEA_TEGRA=y
@@ -5323,6 +5346,8 @@ CONFIG_LEDS_SYSCON=y
 # RGB LED drivers
 #
 # CONFIG_LEDS_GROUP_MULTICOLOR is not set
+# CONFIG_LEDS_KTD202X is not set
+# CONFIG_LEDS_NCP5623 is not set
 # CONFIG_LEDS_PWM_MULTICOLOR is not set
 # CONFIG_LEDS_QCOM_LPG is not set
 
@@ -5839,7 +5864,6 @@ CONFIG_RPMSG_QCOM_SMD=y
 #
 # Broadcom SoC drivers
 #
-# CONFIG_SOC_BRCMSTB is not set
 # end of Broadcom SoC drivers
 
 #
@@ -5996,6 +6020,7 @@ CONFIG_IIO=y
 #
 # CONFIG_AD4130 is not set
 # CONFIG_AD7091R5 is not set
+# CONFIG_AD7091R8 is not set
 # CONFIG_AD7124 is not set
 # CONFIG_AD7192 is not set
 # CONFIG_AD7266 is not set
@@ -6015,6 +6040,7 @@ CONFIG_IIO=y
 # CONFIG_AD7923 is not set
 # CONFIG_AD7949 is not set
 # CONFIG_AD799X is not set
+# CONFIG_AD9467 is not set
 # CONFIG_ADI_AXI_ADC is not set
 # CONFIG_CC10001_ADC is not set
 # CONFIG_ENVELOPE_DETECTOR is not set
@@ -6053,6 +6079,7 @@ CONFIG_IIO=y
 # CONFIG_TI_ADS1015 is not set
 # CONFIG_TI_ADS7924 is not set
 # CONFIG_TI_ADS1100 is not set
+# CONFIG_TI_ADS1298 is not set
 # CONFIG_TI_ADS7950 is not set
 # CONFIG_TI_ADS8344 is not set
 # CONFIG_TI_ADS8688 is not set
@@ -6096,6 +6123,7 @@ CONFIG_IIO=y
 #
 # Chemical Sensors
 #
+# CONFIG_AOSONG_AGS02MA is not set
 # CONFIG_ATLAS_PH_SENSOR is not set
 # CONFIG_ATLAS_EZO_SENSOR is not set
 # CONFIG_BME680 is not set
@@ -6163,6 +6191,7 @@ CONFIG_IIO=y
 # CONFIG_MAX5821 is not set
 # CONFIG_MCP4725 is not set
 # CONFIG_MCP4728 is not set
+# CONFIG_MCP4821 is not set
 # CONFIG_MCP4922 is not set
 # CONFIG_TI_DAC082S085 is not set
 # CONFIG_TI_DAC5571 is not set
@@ -6198,6 +6227,7 @@ CONFIG_IIO=y
 # CONFIG_ADF4350 is not set
 # CONFIG_ADF4371 is not set
 # CONFIG_ADF4377 is not set
+# CONFIG_ADMFM2000 is not set
 # CONFIG_ADMV1013 is not set
 # CONFIG_ADMV1014 is not set
 # CONFIG_ADMV4420 is not set
@@ -6242,6 +6272,7 @@ CONFIG_IIO=y
 # CONFIG_DHT11 is not set
 # CONFIG_HDC100X is not set
 # CONFIG_HDC2010 is not set
+# CONFIG_HDC3020 is not set
 # CONFIG_HTS221 is not set
 # CONFIG_HTU21 is not set
 # CONFIG_SI7005 is not set
@@ -6292,10 +6323,12 @@ CONFIG_IIO=y
 # CONFIG_SENSORS_ISL29018 is not set
 # CONFIG_SENSORS_ISL29028 is not set
 # CONFIG_ISL29125 is not set
+# CONFIG_ISL76682 is not set
 # CONFIG_JSA1212 is not set
 # CONFIG_ROHM_BU27008 is not set
 # CONFIG_ROHM_BU27034 is not set
 # CONFIG_RPR0521 is not set
+# CONFIG_LTR390 is not set
 # CONFIG_LTR501 is not set
 # CONFIG_LTRF216A is not set
 # CONFIG_LV0104CS is not set
@@ -6321,6 +6354,7 @@ CONFIG_IIO=y
 # CONFIG_VCNL4035 is not set
 # CONFIG_VEML6030 is not set
 # CONFIG_VEML6070 is not set
+# CONFIG_VEML6075 is not set
 # CONFIG_VL6180 is not set
 # CONFIG_ZOPT2201 is not set
 # end of Light sensors
@@ -6328,6 +6362,7 @@ CONFIG_IIO=y
 #
 # Magnetometer sensors
 #
+# CONFIG_AF8133J is not set
 # CONFIG_AK8974 is not set
 # CONFIG_AK8975 is not set
 # CONFIG_AK09911 is not set
@@ -6387,10 +6422,12 @@ CONFIG_IIO=y
 # Pressure sensors
 #
 # CONFIG_ABP060MG is not set
+# CONFIG_ROHM_BM1390 is not set
 # CONFIG_BMP280 is not set
 # CONFIG_DLHL60D is not set
 # CONFIG_DPS310 is not set
 # CONFIG_HP03 is not set
+# CONFIG_HSC030PA is not set
 # CONFIG_ICP10100 is not set
 # CONFIG_MPL115_I2C is not set
 # CONFIG_MPL115_SPI is not set
@@ -6434,6 +6471,7 @@ CONFIG_IIO=y
 #
 # CONFIG_AD2S90 is not set
 # CONFIG_AD2S1200 is not set
+# CONFIG_AD2S1210 is not set
 # end of Resolver to digital converters
 
 #
@@ -6443,6 +6481,7 @@ CONFIG_IIO=y
 # CONFIG_MAXIM_THERMOCOUPLE is not set
 # CONFIG_MLX90614 is not set
 # CONFIG_MLX90632 is not set
+# CONFIG_MLX90635 is not set
 # CONFIG_TMP006 is not set
 # CONFIG_TMP007 is not set
 # CONFIG_TMP117 is not set
@@ -6451,6 +6490,7 @@ CONFIG_IIO=y
 # CONFIG_MAX30208 is not set
 # CONFIG_MAX31856 is not set
 # CONFIG_MAX31865 is not set
+# CONFIG_MCP9600 is not set
 # end of Temperature sensors
 
 # CONFIG_NTB is not set
@@ -6577,6 +6617,7 @@ CONFIG_RAS=y
 # CONFIG_DAX is not set
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
+CONFIG_NVMEM_LAYOUTS=y
 
 #
 # Layout Types
@@ -6619,6 +6660,7 @@ CONFIG_PM_OPP=y
 CONFIG_DCACHE_WORD_ACCESS=y
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_FS_IOMAP=y
+CONFIG_FS_STACK=y
 CONFIG_BUFFER_HEAD=y
 CONFIG_LEGACY_DIRECT_IO=y
 # CONFIG_EXT2_FS is not set
@@ -6640,13 +6682,13 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 CONFIG_BTRFS_FS=y
 CONFIG_BTRFS_FS_POSIX_ACL=y
-# CONFIG_BTRFS_FS_CHECK_INTEGRITY is not set
 # CONFIG_BTRFS_FS_RUN_SANITY_TESTS is not set
 # CONFIG_BTRFS_DEBUG is not set
 # CONFIG_BTRFS_ASSERT is not set
 # CONFIG_BTRFS_FS_REF_VERIFY is not set
 # CONFIG_NILFS2_FS is not set
 # CONFIG_F2FS_FS is not set
+# CONFIG_BCACHEFS_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
 # CONFIG_EXPORTFS_BLOCK_OPS is not set
@@ -6668,6 +6710,7 @@ CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 # CONFIG_VIRTIO_FS is not set
+CONFIG_FUSE_PASSTHROUGH=y
 CONFIG_OVERLAY_FS=m
 # CONFIG_OVERLAY_FS_REDIRECT_DIR is not set
 CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW=y
@@ -6679,7 +6722,6 @@ CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW=y
 #
 # Caches
 #
-# CONFIG_FSCACHE is not set
 # end of Caches
 
 #
@@ -7011,14 +7053,12 @@ CONFIG_CRYPTO_SM4=y
 # CONFIG_CRYPTO_ARC4 is not set
 # CONFIG_CRYPTO_CHACHA20 is not set
 CONFIG_CRYPTO_CBC=y
-# CONFIG_CRYPTO_CFB is not set
 CONFIG_CRYPTO_CTR=y
 # CONFIG_CRYPTO_CTS is not set
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_HCTR2 is not set
 # CONFIG_CRYPTO_KEYWRAP is not set
 # CONFIG_CRYPTO_LRW is not set
-# CONFIG_CRYPTO_OFB is not set
 # CONFIG_CRYPTO_PCBC is not set
 # CONFIG_CRYPTO_XTS is not set
 CONFIG_CRYPTO_NHPOLY1305=y
@@ -7093,7 +7133,9 @@ CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_CTR is not set
 CONFIG_CRYPTO_DRBG=y
 CONFIG_CRYPTO_JITTERENTROPY=y
-# CONFIG_CRYPTO_JITTERENTROPY_TESTINTERFACE is not set
+CONFIG_CRYPTO_JITTERENTROPY_MEMORY_BLOCKS=64
+CONFIG_CRYPTO_JITTERENTROPY_MEMORY_BLOCKSIZE=32
+CONFIG_CRYPTO_JITTERENTROPY_OSR=1
 CONFIG_CRYPTO_KDF800108_CTR=y
 # end of Random number generation
 
@@ -7150,6 +7192,7 @@ CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_QAT_C3XXX is not set
 # CONFIG_CRYPTO_DEV_QAT_C62X is not set
 # CONFIG_CRYPTO_DEV_QAT_4XXX is not set
+# CONFIG_CRYPTO_DEV_QAT_420XX is not set
 # CONFIG_CRYPTO_DEV_QAT_DH895xCCVF is not set
 # CONFIG_CRYPTO_DEV_QAT_C3XXXVF is not set
 # CONFIG_CRYPTO_DEV_QAT_C62XVF is not set
@@ -7262,7 +7305,6 @@ CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_XZ_DEC=y
 CONFIG_XZ_DEC_X86=y
 CONFIG_XZ_DEC_POWERPC=y
-CONFIG_XZ_DEC_IA64=y
 CONFIG_XZ_DEC_ARM=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_SPARC=y
@@ -7335,6 +7377,7 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_STACKWALK=y
 CONFIG_STACKDEPOT=y
 CONFIG_SBITMAP=y
+# CONFIG_LWQ_TEST is not set
 # end of Library routines
 
 CONFIG_GENERIC_IOREMAP=y
@@ -7403,7 +7446,7 @@ CONFIG_DEBUG_FS_ALLOW_ALL=y
 # CONFIG_DEBUG_FS_ALLOW_NONE is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
-CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
+CONFIG_ARCH_HAS_UBSAN=y
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_KCSAN_COMPILER=y
 # end of Generic Kernel Debugging Instruments
@@ -7597,8 +7640,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
-# CONFIG_STRING_SELFTEST is not set
-# CONFIG_TEST_STRING_HELPERS is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_PRINTF is not set
 # CONFIG_TEST_SCANF is not set
@@ -7624,6 +7665,7 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_MEMCAT_P is not set
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_FREE_PAGES is not set
+# CONFIG_TEST_OBJPOOL is not set
 CONFIG_ARCH_USE_MEMTEST=y
 CONFIG_MEMTEST=y
 # end of Kernel Testing and Coverage
