linux (Rockchip RK3288): add R8712U for WEXT_PRIV required for RTL8192DU

--- a/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
+++ b/projects/Rockchip/devices/RK3288/linux/default/linux.arm.conf
@@ -1391,8 +1391,10 @@ CONFIG_BT_HCIRSI=m
 # CONFIG_MCTP is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
+CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
+CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=m
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
@@ -5418,7 +5420,7 @@ CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
 # CONFIG_RTLLIB is not set
 CONFIG_RTL8723BS=m
-# CONFIG_R8712U is not set
+CONFIG_R8712U=m
 # CONFIG_VT6656 is not set
 
 #
