--- a/projects/NXP/devices/iMX6/linux/linux.arm.conf
+++ b/projects/NXP/devices/iMX6/linux/linux.arm.conf
@@ -2439,6 +2439,11 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
 # CONFIG_RTL8192CU is not set
+CONFIG_RTL8192DU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+CONFIG_RTLWIFI_DEBUG=y
+CONFIG_RTL8192D_COMMON=m
 # CONFIG_RTL8XXXU is not set
 CONFIG_RTW88=m
 CONFIG_RTW88_CORE=m
