--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -2503,6 +2503,11 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
 # CONFIG_RTL8192CU is not set
+CONFIG_RTL8192DU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+CONFIG_RTLWIFI_DEBUG=y
+CONFIG_RTL8192D_COMMON=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
