busybox: add aliases

--- a/packages/sysutils/busybox/profile.d/98-busybox.conf
+++ b/packages/sysutils/busybox/profile.d/98-busybox.conf
@@ -35,5 +35,7 @@ case "$-" in
     alias kodi-unmask='systemctl unmask kodi'
     alias kodi-toggle-debug='kodi-send -a ToggleDebug'
     alias kodi-take-screenshot='kodi-send -a TakeScreenshot'
+    alias kodi-cat-log="cat /storage/.kodi/temp/kodi.log"
+    alias kodi-less-log="less /storage/.kodi/temp/kodi.log"
     ;;
 esac
