busybox: extend motd with device info like 'Machine model', 'CoreELEC dt-id', ...

--- a/packages/sysutils/busybox/profile.d/98-busybox.conf
+++ b/packages/sysutils/busybox/profile.d/98-busybox.conf
@@ -19,9 +19,9 @@ case "$TERM" in
     ;;
 esac
 
-# aliases for interactive shell
 case "$-" in
   *i*)
+    # aliases for interactive shell
     alias ll='ls -alF'
     alias h='history'
     alias jc='journalctl --no-pager'
@@ -37,5 +37,43 @@ case "$-" in
     alias kodi-take-screenshot='kodi-send -a TakeScreenshot'
     alias kodi-cat-log="cat /storage/.kodi/temp/kodi.log"
     alias kodi-less-log="less /storage/.kodi/temp/kodi.log"
+
+    # some device info after MOTD
+    # get os pretty name length to justify data
+    pretty_name_len=$(awk -F'"' '/PRETTY_NAME=/ {print index($2,":")-1}' /etc/os-release)
+
+    # display machine model
+    if [ -f /proc/device-tree/model ]; then
+      value=$(tr -d '\0' < /proc/device-tree/model)
+      printf "%${pretty_name_len}s: %s\n" "Machine model" "${value}"
+    fi
+
+    # display coreelec dt-id
+    if [ -f /proc/device-tree/coreelec-dt-id ]; then
+      value=$(tr -d '\0' < /proc/device-tree/coreelec-dt-id)
+      printf "%${pretty_name_len}s: %s\n" "CoreELEC dt-id" "${value}"
+    fi
+
+    # display amlogic dt-id
+    if [ -f /proc/device-tree/amlogic-dt-id ]; then
+      value=$(tr -d '\0' < /proc/device-tree/amlogic-dt-id)
+      printf "%${pretty_name_len}s: %s\n" "Amlogic dt-id" "${value}"
+    fi
+
+    # display linux version
+    value=$(cat /proc/version | sed 's|Linux version \(.* (.*)\) (.*) \(#[0-9]*\) .* PREEMPT \(.*\)|\1 \2 \3|')
+    printf "%${pretty_name_len}s: %s\n" "Linux version" "${value}"
+
+    # display kodi compile date
+    kodi_file=$(readlink -f /proc/$(pidof kodi.bin)/exe)
+    if [ "${kodi_file}" = "/proc/exe" ]; then
+      kodi_file=/usr/lib/kodi/kodi.bin
+    fi
+
+    value=$(stat ${kodi_file} | awk '/Modify:/ {gsub(".000000000", ""); printf("%s %s %s\n", $2, $3, $4)}')
+    printf "%${pretty_name_len}s: %s\n" "Kodi compiled" "${value}"
+
+    # put empty line before prompt
+    echo
     ;;
 esac
