linux (NXP iMX8): update .config for 6.11

--- a/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
+++ b/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
@@ -1,20 +1,21 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.10.0 Kernel Configuration
+# Linux/arm64 6.11.0 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-14.1.0 (GCC) 14.1.0"
+CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-14.2.0 (GCC) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=140100
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24200
+CONFIG_AS_VERSION=24301
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24200
+CONFIG_LD_VERSION=24301
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
+CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_PAHOLE_VERSION=0
@@ -157,7 +158,7 @@ CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 # CONFIG_CGROUP_FAVOR_DYNMODS is not set
 CONFIG_MEMCG=y
-CONFIG_MEMCG_KMEM=y
+# CONFIG_MEMCG_V1 is not set
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
@@ -238,7 +239,6 @@ CONFIG_CACHESTAT_SYSCALL=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_SELFTEST is not set
 # CONFIG_KALLSYMS_ALL is not set
-CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_HAVE_PERF_EVENTS=y
 
@@ -372,7 +372,6 @@ CONFIG_ARM64_ERRATUM_1319367=y
 # CONFIG_ARM64_ERRATUM_2966298 is not set
 # CONFIG_ARM64_ERRATUM_3117295 is not set
 # CONFIG_ARM64_ERRATUM_3194386 is not set
-# CONFIG_ARM64_ERRATUM_3312417 is not set
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -506,6 +505,7 @@ CONFIG_ARM64_CONTPTE=y
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
+# CONFIG_COMPRESSED_INSTALL is not set
 # end of Boot options
 
 #
@@ -688,6 +688,7 @@ CONFIG_HAVE_ARCH_COMPILER_H=y
 CONFIG_HAVE_ARCH_PREL32_RELOCATIONS=y
 # CONFIG_LOCK_EVENT_COUNTS is not set
 CONFIG_ARCH_HAS_RELR=y
+CONFIG_RELR=y
 CONFIG_HAVE_PREEMPT_DYNAMIC=y
 CONFIG_HAVE_PREEMPT_DYNAMIC_KEY=y
 CONFIG_ARCH_WANT_LD_ORPHAN_WARN=y
@@ -875,6 +876,7 @@ CONFIG_COREDUMP=y
 #
 CONFIG_SWAP=y
 # CONFIG_ZSWAP is not set
+CONFIG_HAVE_ZSMALLOC=y
 
 #
 # Slab allocator options
@@ -884,6 +886,7 @@ CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
+CONFIG_SLAB_BUCKETS=y
 # CONFIG_SLUB_STATS is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_RANDOM_KMALLOC_CACHES is not set
@@ -1958,6 +1961,7 @@ CONFIG_NET_VENDOR_GOOGLE=y
 # CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
+# CONFIG_NET_VENDOR_META is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MICROSEMI is not set
@@ -2162,6 +2166,7 @@ CONFIG_ATH10K_SDIO=m
 CONFIG_ATH10K_USB=m
 # CONFIG_ATH10K_DEBUG is not set
 # CONFIG_ATH10K_DEBUGFS is not set
+CONFIG_ATH10K_LEDS=y
 CONFIG_WCN36XX=m
 # CONFIG_WCN36XX_DEBUGFS is not set
 # CONFIG_ATH11K is not set
@@ -2659,6 +2664,7 @@ CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_CADENCE is not set
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_SPI_CADENCE_XSPI is not set
+# CONFIG_SPI_CH341 is not set
 # CONFIG_SPI_DESIGNWARE is not set
 # CONFIG_SPI_FSL_LPSPI is not set
 # CONFIG_SPI_FSL_QUADSPI is not set
@@ -2744,6 +2750,7 @@ CONFIG_PINCTRL_IMX8QXP=y
 # CONFIG_PINCTRL_IMX8DXL is not set
 # CONFIG_PINCTRL_IMX8ULP is not set
 # CONFIG_PINCTRL_IMXRT1050 is not set
+# CONFIG_PINCTRL_IMX91 is not set
 # CONFIG_PINCTRL_IMX93 is not set
 # CONFIG_PINCTRL_IMXRT1170 is not set
 
@@ -2835,6 +2842,13 @@ CONFIG_GPIO_VF610=y
 # CONFIG_GPIO_SIM is not set
 # end of Virtual GPIO drivers
 
+#
+# GPIO Debugging utilities
+#
+# CONFIG_GPIO_SLOPPY_LOGIC_ANALYZER is not set
+# CONFIG_GPIO_VIRTUSER is not set
+# end of GPIO Debugging utilities
+
 # CONFIG_W1 is not set
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
@@ -2847,6 +2861,7 @@ CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_SYSCON_REBOOT_MODE is not set
 # CONFIG_NVMEM_REBOOT_MODE is not set
+# CONFIG_POWER_SEQUENCING is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_POWER_SUPPLY_HWMON=y
@@ -2865,6 +2880,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_BATTERY_BQ27XXX is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
+# CONFIG_BATTERY_MAX1720X is not set
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CHARGER_LP8727 is not set
 # CONFIG_CHARGER_GPIO is not set
@@ -2903,7 +2919,6 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_AD7314 is not set
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
-# CONFIG_SENSORS_ADM1021 is not set
 # CONFIG_SENSORS_ADM1025 is not set
 # CONFIG_SENSORS_ADM1026 is not set
 # CONFIG_SENSORS_ADM1029 is not set
@@ -2927,6 +2942,7 @@ CONFIG_SENSORS_ARM_SCPI=y
 # CONFIG_SENSORS_CHIPCAP2 is not set
 # CONFIG_SENSORS_CORSAIR_CPRO is not set
 # CONFIG_SENSORS_CORSAIR_PSU is not set
+# CONFIG_SENSORS_CROS_EC is not set
 # CONFIG_SENSORS_DS620 is not set
 # CONFIG_SENSORS_DS1621 is not set
 # CONFIG_SENSORS_F71805F is not set
@@ -2973,7 +2989,6 @@ CONFIG_SENSORS_GPIO_FAN=m
 # CONFIG_SENSORS_MAX6620 is not set
 # CONFIG_SENSORS_MAX6621 is not set
 # CONFIG_SENSORS_MAX6639 is not set
-# CONFIG_SENSORS_MAX6642 is not set
 # CONFIG_SENSORS_MAX6650 is not set
 # CONFIG_SENSORS_MAX6697 is not set
 # CONFIG_SENSORS_MAX31790 is not set
@@ -3042,6 +3057,7 @@ CONFIG_SENSORS_PWM_FAN=m
 # CONFIG_SENSORS_INA2XX is not set
 # CONFIG_SENSORS_INA238 is not set
 # CONFIG_SENSORS_INA3221 is not set
+# CONFIG_SENSORS_SPD5118 is not set
 # CONFIG_SENSORS_TC74 is not set
 # CONFIG_SENSORS_THMC50 is not set
 # CONFIG_SENSORS_TMP102 is not set
@@ -3173,6 +3189,7 @@ CONFIG_MFD_CROS_EC_DEV=y
 # CONFIG_MFD_88PM800 is not set
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
+# CONFIG_MFD_88PM886_PMIC is not set
 # CONFIG_MFD_MAX14577 is not set
 # CONFIG_MFD_MAX77541 is not set
 # CONFIG_MFD_MAX77620 is not set
@@ -3253,10 +3270,13 @@ CONFIG_MFD_WM8994=y
 CONFIG_MFD_ROHM_BD718XX=y
 # CONFIG_MFD_ROHM_BD71828 is not set
 # CONFIG_MFD_ROHM_BD957XMUF is not set
+# CONFIG_MFD_ROHM_BD96801 is not set
 # CONFIG_MFD_STPMIC1 is not set
 # CONFIG_MFD_STMFX is not set
 # CONFIG_MFD_ATC260X_I2C is not set
 # CONFIG_MFD_QCOM_PM8008 is not set
+# CONFIG_MFD_CS40L50_I2C is not set
+# CONFIG_MFD_CS40L50_SPI is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
 # CONFIG_MFD_RSMU_I2C is not set
@@ -3597,6 +3617,7 @@ CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
 # Chips&Media media platform drivers
 #
 # CONFIG_VIDEO_CODA is not set
+# CONFIG_VIDEO_E5010_JPEG_ENC is not set
 
 #
 # Intel media platform drivers
@@ -3636,6 +3657,10 @@ CONFIG_VIDEO_IMX8_JPEG=m
 
 #
 # Qualcomm media platform drivers
+#
+
+#
+# Raspberry Pi media platform drivers
 #
 
 #
@@ -3715,6 +3740,8 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_ALVIUM_CSI2 is not set
 # CONFIG_VIDEO_AR0521 is not set
 # CONFIG_VIDEO_GC0308 is not set
+# CONFIG_VIDEO_GC05A2 is not set
+# CONFIG_VIDEO_GC08A3 is not set
 # CONFIG_VIDEO_GC2145 is not set
 # CONFIG_VIDEO_HI556 is not set
 # CONFIG_VIDEO_HI846 is not set
@@ -3724,6 +3751,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_IMX219 is not set
 # CONFIG_VIDEO_IMX258 is not set
 # CONFIG_VIDEO_IMX274 is not set
+# CONFIG_VIDEO_IMX283 is not set
 # CONFIG_VIDEO_IMX290 is not set
 # CONFIG_VIDEO_IMX296 is not set
 # CONFIG_VIDEO_IMX319 is not set
@@ -3779,7 +3807,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_S5C73M3 is not set
 # CONFIG_VIDEO_S5K5BAF is not set
 # CONFIG_VIDEO_S5K6A3 is not set
-# CONFIG_VIDEO_ST_VGXY61 is not set
+# CONFIG_VIDEO_VGXY61 is not set
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_ET8EK8 is not set
 
@@ -3919,6 +3947,8 @@ CONFIG_VIDEO_CX25840=m
 # CONFIG_VIDEO_DS90UB913 is not set
 # CONFIG_VIDEO_DS90UB953 is not set
 # CONFIG_VIDEO_DS90UB960 is not set
+# CONFIG_VIDEO_MAX96714 is not set
+# CONFIG_VIDEO_MAX96717 is not set
 # end of Video serializers and deserializers
 
 #
@@ -4157,13 +4187,15 @@ CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
-CONFIG_DRM_DISPLAY_HELPER=y
 CONFIG_DRM_DISPLAY_DP_AUX_BUS=y
+CONFIG_DRM_DISPLAY_HELPER=y
+CONFIG_DRM_BRIDGE_CONNECTOR=y
 # CONFIG_DRM_DISPLAY_DP_AUX_CEC is not set
 # CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV is not set
 CONFIG_DRM_DISPLAY_DP_HELPER=y
 CONFIG_DRM_DISPLAY_HDCP_HELPER=y
 CONFIG_DRM_DISPLAY_HDMI_HELPER=y
+CONFIG_DRM_DISPLAY_HDMI_STATE_HELPER=y
 CONFIG_DRM_GEM_DMA_HELPER=y
 CONFIG_DRM_SCHED=y
 
@@ -4362,6 +4394,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_QCOM_WLED is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
+# CONFIG_BACKLIGHT_LM3509 is not set
 # CONFIG_BACKLIGHT_LM3630A is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
@@ -4468,7 +4501,6 @@ CONFIG_SND_IMX_SOC=y
 #
 CONFIG_SND_SOC_IMX_ES8328=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
-CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_FSL_ASOC_CARD=y
 CONFIG_SND_SOC_IMX_AUDMIX=y
 CONFIG_SND_SOC_IMX_HDMI=y
@@ -4511,6 +4543,7 @@ CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_AK4458=y
 # CONFIG_SND_SOC_AK4554 is not set
 # CONFIG_SND_SOC_AK4613 is not set
+# CONFIG_SND_SOC_AK4619 is not set
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 CONFIG_SND_SOC_AK5558=y
@@ -4552,12 +4585,14 @@ CONFIG_SND_SOC_AK5558=y
 # CONFIG_SND_SOC_CS4341 is not set
 # CONFIG_SND_SOC_CS4349 is not set
 # CONFIG_SND_SOC_CS53L30 is not set
+# CONFIG_SND_SOC_CS530X_I2C is not set
 # CONFIG_SND_SOC_CX2072X is not set
 # CONFIG_SND_SOC_DA7213 is not set
 # CONFIG_SND_SOC_DMIC is not set
 CONFIG_SND_SOC_HDMI_CODEC=y
 CONFIG_SND_SOC_ES7134=y
 # CONFIG_SND_SOC_ES7241 is not set
+# CONFIG_SND_SOC_ES8311 is not set
 # CONFIG_SND_SOC_ES8316 is not set
 # CONFIG_SND_SOC_ES8326 is not set
 CONFIG_SND_SOC_ES8328=y
@@ -5158,6 +5193,7 @@ CONFIG_LEDS_CLASS_MULTICOLOR=y
 # CONFIG_LEDS_BCM6328 is not set
 # CONFIG_LEDS_BCM6358 is not set
 # CONFIG_LEDS_CR0014114 is not set
+# CONFIG_LEDS_CROS_EC is not set
 # CONFIG_LEDS_EL15203000 is not set
 # CONFIG_LEDS_LM3530 is not set
 # CONFIG_LEDS_LM3532 is not set
@@ -5205,6 +5241,7 @@ CONFIG_LEDS_SYSCON=y
 # CONFIG_LEDS_RT4505 is not set
 # CONFIG_LEDS_RT8515 is not set
 # CONFIG_LEDS_SGM3140 is not set
+# CONFIG_LEDS_SY7802 is not set
 
 #
 # RGB LED drivers
@@ -5237,6 +5274,7 @@ CONFIG_LEDS_TRIGGER_CPU=y
 # CONFIG_LEDS_TRIGGER_NETDEV is not set
 # CONFIG_LEDS_TRIGGER_PATTERN is not set
 # CONFIG_LEDS_TRIGGER_TTY is not set
+# CONFIG_LEDS_TRIGGER_INPUT_EVENTS is not set
 
 #
 # Simple LED drivers
@@ -5508,10 +5546,10 @@ CONFIG_CROS_EC_SENSORHUB=y
 CONFIG_CROS_EC_SYSFS=y
 # CONFIG_CROS_HPS_I2C is not set
 CONFIG_CROS_USBPD_NOTIFY=y
+# CONFIG_CZNIC_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
 # CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_ARM64_PLATFORM_DEVICES=y
-# CONFIG_EC_ACER_ASPIRE1 is not set
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -5808,6 +5846,7 @@ CONFIG_IIO=y
 # CONFIG_AD7291 is not set
 # CONFIG_AD7292 is not set
 # CONFIG_AD7298 is not set
+# CONFIG_AD7380 is not set
 # CONFIG_AD7476 is not set
 # CONFIG_AD7606_IFACE_PARALLEL is not set
 # CONFIG_AD7606_IFACE_SPI is not set
@@ -5822,7 +5861,6 @@ CONFIG_IIO=y
 # CONFIG_AD7949 is not set
 # CONFIG_AD799X is not set
 # CONFIG_AD9467 is not set
-# CONFIG_ADI_AXI_ADC is not set
 # CONFIG_CC10001_ADC is not set
 # CONFIG_ENVELOPE_DETECTOR is not set
 # CONFIG_HI8435 is not set
@@ -5861,6 +5899,7 @@ CONFIG_IIO=y
 # CONFIG_TI_ADC128S052 is not set
 # CONFIG_TI_ADC161S626 is not set
 # CONFIG_TI_ADS1015 is not set
+# CONFIG_TI_ADS1119 is not set
 # CONFIG_TI_ADS7924 is not set
 # CONFIG_TI_ADS1100 is not set
 # CONFIG_TI_ADS1298 is not set
@@ -5912,6 +5951,7 @@ CONFIG_IIO=y
 # CONFIG_ATLAS_EZO_SENSOR is not set
 # CONFIG_BME680 is not set
 # CONFIG_CCS811 is not set
+# CONFIG_ENS160 is not set
 # CONFIG_IAQCORE is not set
 # CONFIG_PMS7003 is not set
 # CONFIG_SCD30_CORE is not set
@@ -5957,7 +5997,6 @@ CONFIG_IIO=y
 # CONFIG_AD5504 is not set
 # CONFIG_AD5624R_SPI is not set
 # CONFIG_AD9739A is not set
-# CONFIG_ADI_AXI_DAC is not set
 # CONFIG_LTC2688 is not set
 # CONFIG_AD5686_SPI is not set
 # CONFIG_AD5696_I2C is not set
@@ -6146,6 +6185,7 @@ CONFIG_IIO=y
 # CONFIG_VCNL4000 is not set
 # CONFIG_VCNL4035 is not set
 # CONFIG_VEML6030 is not set
+# CONFIG_VEML6040 is not set
 # CONFIG_VEML6070 is not set
 # CONFIG_VEML6075 is not set
 # CONFIG_VL6180 is not set
@@ -6293,6 +6333,7 @@ CONFIG_PWM=y
 # CONFIG_PWM_CLK is not set
 # CONFIG_PWM_CROS_EC is not set
 # CONFIG_PWM_FSL_FTM is not set
+# CONFIG_PWM_GPIO is not set
 # CONFIG_PWM_IMX1 is not set
 # CONFIG_PWM_IMX27 is not set
 # CONFIG_PWM_IMX_TPM is not set
@@ -6307,7 +6348,9 @@ CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_MAX_NR=1
 CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
+CONFIG_IRQ_MSI_LIB=y
 # CONFIG_AL_FIC is not set
+# CONFIG_LAN966X_OIC is not set
 # CONFIG_XILINX_INTC is not set
 CONFIG_IMX_GPCV2=y
 CONFIG_PARTITION_PERCPU=y
@@ -6320,6 +6363,7 @@ CONFIG_IMX_INTMUX=y
 CONFIG_RESET_CONTROLLER=y
 # CONFIG_RESET_GPIO is not set
 CONFIG_RESET_IMX7=y
+# CONFIG_RESET_IMX8MP_AUDIOMIX is not set
 # CONFIG_RESET_SIMPLE is not set
 # CONFIG_RESET_TI_SYSCON is not set
 # CONFIG_RESET_TI_TPS380X is not set
@@ -6345,6 +6389,7 @@ CONFIG_PHY_FSL_IMX8MQ_USB=y
 # CONFIG_PHY_MIXEL_LVDS_PHY is not set
 # CONFIG_PHY_MIXEL_MIPI_DPHY is not set
 CONFIG_PHY_FSL_IMX8M_PCIE=y
+# CONFIG_PHY_FSL_IMX8QM_HSIO is not set
 # CONFIG_PHY_FSL_SAMSUNG_HDMI_PHY is not set
 # CONFIG_PHY_PXA_28NM_HSIC is not set
 # CONFIG_PHY_PXA_28NM_USB2 is not set
@@ -6786,7 +6831,6 @@ CONFIG_CRYPTO_ECC=y
 CONFIG_CRYPTO_ECDH=y
 # CONFIG_CRYPTO_ECDSA is not set
 # CONFIG_CRYPTO_ECRDSA is not set
-# CONFIG_CRYPTO_SM2 is not set
 # CONFIG_CRYPTO_CURVE25519 is not set
 # end of Public-key cryptography
 
@@ -7099,6 +7143,7 @@ CONFIG_NLATTR=y
 CONFIG_CLZ_TAB=y
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
+CONFIG_DIMLIB=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 CONFIG_HAVE_GENERIC_VDSO=y
