--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.10.3 Kernel Configuration
+# Linux/x86 6.11.0 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="x86_64-libreelec-linux-gnu-gcc-14.2.0 (GCC) 14.2.0"
 CONFIG_CC_IS_GCC=y
@@ -184,7 +184,7 @@ CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 # CONFIG_CGROUP_FAVOR_DYNMODS is not set
 CONFIG_MEMCG=y
-CONFIG_MEMCG_KMEM=y
+# CONFIG_MEMCG_V1 is not set
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
@@ -269,7 +269,6 @@ CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_SELFTEST is not set
 # CONFIG_KALLSYMS_ALL is not set
 CONFIG_KALLSYMS_ABSOLUTE_PERCPU=y
-CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_HAVE_PERF_EVENTS=y
 
@@ -385,6 +384,7 @@ CONFIG_SCHED_SMT=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_X86_LOCAL_APIC=y
+CONFIG_ACPI_MADT_WAKEUP=y
 CONFIG_X86_IO_APIC=y
 # CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS is not set
 # CONFIG_X86_MCE is not set
@@ -443,7 +443,6 @@ CONFIG_EFI=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_HANDOVER_PROTOCOL=y
 CONFIG_EFI_MIXED=y
-# CONFIG_EFI_FAKE_MEMMAP is not set
 # CONFIG_EFI_RUNTIME_MAP is not set
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
@@ -938,6 +937,7 @@ CONFIG_COREDUMP=y
 #
 CONFIG_SWAP=y
 # CONFIG_ZSWAP is not set
+CONFIG_HAVE_ZSMALLOC=y
 
 #
 # Slab allocator options
@@ -947,6 +947,7 @@ CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
+CONFIG_SLAB_BUCKETS=y
 # CONFIG_SLUB_STATS is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_RANDOM_KMALLOC_CACHES is not set
@@ -1677,6 +1678,11 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 # Mobiveil-based PCIe controllers
 #
 # end of Mobiveil-based PCIe controllers
+
+#
+# PLDA-based PCIe controllers
+#
+# end of PLDA-based PCIe controllers
 # end of PCI controller drivers
 
 #
@@ -1907,6 +1913,7 @@ CONFIG_MISC_RTSX_USB=y
 # CONFIG_UACCE is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_GP_PCI1XXXX is not set
+# CONFIG_KEBA_CP500 is not set
 # end of Misc devices
 
 #
@@ -2282,6 +2289,7 @@ CONFIG_SKY2=y
 # CONFIG_OCTEON_EP is not set
 # CONFIG_OCTEON_EP_VF is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
+# CONFIG_NET_VENDOR_META is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 CONFIG_NET_VENDOR_MICROCHIP=y
 CONFIG_LAN743X=y
@@ -2428,6 +2436,7 @@ CONFIG_MDIO_DEVRES=y
 #
 # PCS device drivers
 #
+# CONFIG_PCS_XPCS is not set
 # end of PCS device drivers
 
 CONFIG_PPP=m
@@ -2527,6 +2536,7 @@ CONFIG_ATH10K_PCI=m
 CONFIG_ATH10K_USB=m
 # CONFIG_ATH10K_DEBUG is not set
 # CONFIG_ATH10K_DEBUGFS is not set
+CONFIG_ATH10K_LEDS=y
 # CONFIG_ATH10K_TRACING is not set
 CONFIG_WCN36XX=m
 # CONFIG_WCN36XX_DEBUGFS is not set
@@ -2717,6 +2727,7 @@ CONFIG_RTW89_CORE=m
 CONFIG_RTW89_PCI=m
 CONFIG_RTW89_8851B=m
 CONFIG_RTW89_8852A=m
+CONFIG_RTW89_8852B_COMMON=m
 CONFIG_RTW89_8852B=m
 CONFIG_RTW89_8852C=m
 CONFIG_RTW89_8922A=m
@@ -3358,8 +3369,16 @@ CONFIG_GPIO_CDEV_V1=y
 # CONFIG_GPIO_SIM is not set
 # end of Virtual GPIO drivers
 
+#
+# GPIO Debugging utilities
+#
+# CONFIG_GPIO_SLOPPY_LOGIC_ANALYZER is not set
+# CONFIG_GPIO_VIRTUSER is not set
+# end of GPIO Debugging utilities
+
 # CONFIG_W1 is not set
 # CONFIG_POWER_RESET is not set
+# CONFIG_POWER_SEQUENCING is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_POWER_SUPPLY_HWMON=y
@@ -3376,6 +3395,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_MANAGER_SBS is not set
 # CONFIG_BATTERY_BQ27XXX is not set
 # CONFIG_BATTERY_MAX17042 is not set
+# CONFIG_BATTERY_MAX1720X is not set
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CHARGER_LP8727 is not set
 # CONFIG_CHARGER_GPIO is not set
@@ -3411,7 +3431,6 @@ CONFIG_HWMON_VID=y
 # CONFIG_SENSORS_ABITUGURU3 is not set
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
-# CONFIG_SENSORS_ADM1021 is not set
 # CONFIG_SENSORS_ADM1025 is not set
 # CONFIG_SENSORS_ADM1026 is not set
 # CONFIG_SENSORS_ADM1029 is not set
@@ -3485,7 +3504,6 @@ CONFIG_SENSORS_JC42=m
 # CONFIG_SENSORS_MAX6620 is not set
 # CONFIG_SENSORS_MAX6621 is not set
 # CONFIG_SENSORS_MAX6639 is not set
-# CONFIG_SENSORS_MAX6642 is not set
 # CONFIG_SENSORS_MAX6650 is not set
 # CONFIG_SENSORS_MAX6697 is not set
 # CONFIG_SENSORS_MAX31790 is not set
@@ -3548,6 +3566,7 @@ CONFIG_SENSORS_JC42=m
 # CONFIG_SENSORS_INA2XX is not set
 # CONFIG_SENSORS_INA238 is not set
 # CONFIG_SENSORS_INA3221 is not set
+# CONFIG_SENSORS_SPD5118 is not set
 # CONFIG_SENSORS_TC74 is not set
 # CONFIG_SENSORS_THMC50 is not set
 # CONFIG_SENSORS_TMP102 is not set
@@ -3727,6 +3746,7 @@ CONFIG_MFD_WL1273_CORE=m
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MFD_ATC260X_I2C is not set
+# CONFIG_MFD_CS40L50_I2C is not set
 # CONFIG_RAVE_SP_CORE is not set
 # end of Multifunction device drivers
 
@@ -4115,6 +4135,7 @@ CONFIG_MEDIA_PLATFORM_DRIVERS=y
 #
 # Chips&Media media platform drivers
 #
+# CONFIG_VIDEO_E5010_JPEG_ENC is not set
 
 #
 # Intel media platform drivers
@@ -4146,6 +4167,10 @@ CONFIG_MEDIA_PLATFORM_DRIVERS=y
 
 #
 # Qualcomm media platform drivers
+#
+
+#
+# Raspberry Pi media platform drivers
 #
 
 #
@@ -4233,6 +4258,8 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_ALVIUM_CSI2 is not set
 # CONFIG_VIDEO_AR0521 is not set
 # CONFIG_VIDEO_GC0308 is not set
+# CONFIG_VIDEO_GC05A2 is not set
+# CONFIG_VIDEO_GC08A3 is not set
 # CONFIG_VIDEO_GC2145 is not set
 # CONFIG_VIDEO_HI556 is not set
 # CONFIG_VIDEO_HI846 is not set
@@ -4242,6 +4269,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_IMX219 is not set
 # CONFIG_VIDEO_IMX258 is not set
 # CONFIG_VIDEO_IMX274 is not set
+# CONFIG_VIDEO_IMX283 is not set
 # CONFIG_VIDEO_IMX290 is not set
 # CONFIG_VIDEO_IMX296 is not set
 # CONFIG_VIDEO_IMX319 is not set
@@ -4698,6 +4726,7 @@ CONFIG_DRM_AMDGPU=y
 CONFIG_DRM_AMDGPU_SI=y
 CONFIG_DRM_AMDGPU_CIK=y
 CONFIG_DRM_AMDGPU_USERPTR=y
+# CONFIG_DRM_AMD_ISP is not set
 # CONFIG_DRM_AMDGPU_WERROR is not set
 
 #
@@ -4728,6 +4757,7 @@ CONFIG_DRM_I915_PXP=y
 # drm/i915 Debugging
 #
 # CONFIG_DRM_I915_WERROR is not set
+# CONFIG_DRM_I915_REPLAY_GPU_HANGS_API is not set
 # CONFIG_DRM_I915_DEBUG is not set
 # CONFIG_DRM_I915_DEBUG_MMIO is not set
 # CONFIG_DRM_I915_SW_FENCE_DEBUG_OBJECTS is not set
@@ -4766,7 +4796,6 @@ CONFIG_DRM_XE_FORCE_PROBE=""
 # CONFIG_DRM_XE_DEBUG_VM is not set
 # CONFIG_DRM_XE_DEBUG_SRIOV is not set
 # CONFIG_DRM_XE_DEBUG_MEM is not set
-# CONFIG_DRM_XE_SIMPLE_ERROR_CAPTURE is not set
 # CONFIG_DRM_XE_LARGE_GUC_BUFFER is not set
 # CONFIG_DRM_XE_USERPTR_INVAL_INJECT is not set
 # end of drm/Xe Debugging
@@ -4904,6 +4933,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_SAHARA is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
+# CONFIG_BACKLIGHT_LM3509 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_GPIO is not set
 # CONFIG_BACKLIGHT_LV5207LP is not set
@@ -5060,6 +5090,7 @@ CONFIG_SND_HDA_CODEC_HDMI=m
 CONFIG_SND_HDA_CODEC_CIRRUS=m
 # CONFIG_SND_HDA_CODEC_CS8409 is not set
 CONFIG_SND_HDA_CODEC_CONEXANT=m
+# CONFIG_SND_HDA_CODEC_SENARYTECH is not set
 CONFIG_SND_HDA_CODEC_CA0110=m
 CONFIG_SND_HDA_CODEC_CA0132=m
 CONFIG_SND_HDA_CODEC_CA0132_DSP=y
@@ -5250,6 +5281,7 @@ CONFIG_SND_SOC_ADAU7002=m
 # CONFIG_SND_SOC_AK4458 is not set
 # CONFIG_SND_SOC_AK4554 is not set
 # CONFIG_SND_SOC_AK4613 is not set
+# CONFIG_SND_SOC_AK4619 is not set
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 # CONFIG_SND_SOC_AK5558 is not set
@@ -5285,6 +5317,7 @@ CONFIG_SND_SOC_ADAU7002=m
 # CONFIG_SND_SOC_CS4341 is not set
 # CONFIG_SND_SOC_CS4349 is not set
 # CONFIG_SND_SOC_CS53L30 is not set
+# CONFIG_SND_SOC_CS530X_I2C is not set
 CONFIG_SND_SOC_CX2072X=m
 CONFIG_SND_SOC_DA7213=m
 CONFIG_SND_SOC_DA7219=m
@@ -5292,6 +5325,7 @@ CONFIG_SND_SOC_DMIC=m
 # CONFIG_SND_SOC_ES7134 is not set
 # CONFIG_SND_SOC_ES7241 is not set
 CONFIG_SND_SOC_ES83XX_DSM_COMMON=m
+# CONFIG_SND_SOC_ES8311 is not set
 CONFIG_SND_SOC_ES8316=m
 # CONFIG_SND_SOC_ES8326 is not set
 # CONFIG_SND_SOC_ES8328_I2C is not set
@@ -5552,7 +5586,6 @@ CONFIG_HID_ALPS=m
 #
 # HID-BPF support
 #
-# CONFIG_HID_BPF is not set
 # end of HID-BPF support
 
 #
@@ -5891,6 +5924,7 @@ CONFIG_LEDS_CLASS_MULTICOLOR=y
 #
 # RGB LED drivers
 #
+# CONFIG_LEDS_KTD202X is not set
 
 #
 # LED Triggers
@@ -5915,6 +5949,7 @@ CONFIG_LEDS_TRIGGERS=y
 # CONFIG_LEDS_TRIGGER_NETDEV is not set
 # CONFIG_LEDS_TRIGGER_PATTERN is not set
 # CONFIG_LEDS_TRIGGER_TTY is not set
+# CONFIG_LEDS_TRIGGER_INPUT_EVENTS is not set
 
 #
 # Simple LED drivers
@@ -6116,7 +6151,6 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_DVB_AV7110_IR=y
 CONFIG_DVB_AV7110=m
 CONFIG_DVB_AV7110_OSD=y
-CONFIG_DVB_BUDGET_PATCH=m
 CONFIG_DVB_SP8870=m
 CONFIG_VIDEO_IPU3_IMGU=m
 
@@ -6134,6 +6168,7 @@ CONFIG_STAGING_MEDIA_DEPRECATED=y
 # CONFIG_VME_BUS is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
+# CONFIG_CZNIC_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
 CONFIG_SURFACE_PLATFORMS=y
 # CONFIG_SURFACE_3_POWER_OPREGION is not set
@@ -6170,7 +6205,6 @@ CONFIG_WMI_BMOF=y
 # CONFIG_WIRELESS_HOTKEY is not set
 # CONFIG_IBM_RTL is not set
 # CONFIG_IDEAPAD_LAPTOP is not set
-# CONFIG_LENOVO_YMC is not set
 # CONFIG_SENSORS_HDAPS is not set
 # CONFIG_THINKPAD_ACPI is not set
 # CONFIG_THINKPAD_LMI is not set
@@ -6385,6 +6419,7 @@ CONFIG_IRQ_REMAP=y
 #
 # IRQ chip support
 #
+# CONFIG_LAN966X_OIC is not set
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
@@ -6540,9 +6575,9 @@ CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW=y
 #
 CONFIG_NETFS_SUPPORT=y
 # CONFIG_NETFS_STATS is not set
+# CONFIG_NETFS_DEBUG is not set
 CONFIG_FSCACHE=y
 # CONFIG_FSCACHE_STATS is not set
-# CONFIG_FSCACHE_DEBUG is not set
 # CONFIG_CACHEFILES is not set
 # end of Caches
 
@@ -6840,7 +6875,6 @@ CONFIG_CRYPTO_ECC=m
 CONFIG_CRYPTO_ECDH=m
 # CONFIG_CRYPTO_ECDSA is not set
 # CONFIG_CRYPTO_ECRDSA is not set
-# CONFIG_CRYPTO_SM2 is not set
 # CONFIG_CRYPTO_CURVE25519 is not set
 # end of Public-key cryptography
 
@@ -7155,6 +7189,7 @@ CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
 CONFIG_GENERIC_VDSO_TIME_NS=y
 CONFIG_GENERIC_VDSO_OVERFLOW_PROTECT=y
+CONFIG_VDSO_GETRANDOM=y
 CONFIG_FONT_SUPPORT=y
 # CONFIG_FONTS is not set
 CONFIG_FONT_8x8=y
@@ -7531,7 +7566,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_BITOPS is not set
 # CONFIG_TEST_VMALLOC is not set
-# CONFIG_TEST_USER_COPY is not set
 # CONFIG_TEST_BPF is not set
 # CONFIG_TEST_BLACKHOLE_DEV is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
