Amlogic-no: set Amlogic PCIe as modules disable USB OTG

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -4792,10 +4792,8 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_FEW_INIT_RETRIES is not set
 # CONFIG_USB_DYNAMIC_MINORS is not set
-CONFIG_USB_OTG=y
+# CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_PRODUCTLIST is not set
-# CONFIG_USB_OTG_DISABLE_EXTERNAL_HUB is not set
-# CONFIG_USB_OTG_FSM is not set
 # CONFIG_USB_LEDS_TRIGGER_USBPORT is not set
 CONFIG_USB_AUTOSUSPEND_DELAY=2
 # CONFIG_USB_MON is not set
@@ -6970,8 +6968,8 @@ CONFIG_AMLOGIC_DVB_DMX=m
 #
 CONFIG_AMLOGIC_PCI_HOST=y
 CONFIG_AMLOGIC_PCI_EP=y
-CONFIG_AMLOGIC_PCIE_V2_HOST=y
-CONFIG_AMLOGIC_PCIE_V3_HOST=y
+CONFIG_AMLOGIC_PCIE_V2_HOST=m
+CONFIG_AMLOGIC_PCIE_V3_HOST=m
 # end of Amlogic PCI Support
 
 CONFIG_AMLOGIC_LED=y
