Amlogic-no: build RT5651 ASoC Codec driver

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -4568,9 +4568,11 @@ CONFIG_SND_SOC_ES8316=y
 # CONFIG_SND_SOC_PCM512x_I2C is not set
 # CONFIG_SND_SOC_PCM512x_SPI is not set
 # CONFIG_SND_SOC_RK3328 is not set
+CONFIG_SND_SOC_RL6231=y
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
 # CONFIG_SND_SOC_RT5640 is not set
+CONFIG_SND_SOC_RT5651=y
 # CONFIG_SND_SOC_RT5659 is not set
 # CONFIG_SND_SOC_SGTL5000 is not set
 # CONFIG_SND_SOC_SIMPLE_AMPLIFIER is not set
