Amlogic-no: adjust JLSemi PHYs config name

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -2201,7 +2201,6 @@ CONFIG_NET_VENDOR_STMICRO=y
 CONFIG_STMMAC_ETH=y
 # CONFIG_STMMAC_SELFTESTS is not set
 CONFIG_STMMAC_PLATFORM=y
-CONFIG_STMMAC_JL2XX1=y
 CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_DWMAC_GENERIC is not set
 CONFIG_DWMAC_MESON=y
@@ -2244,6 +2243,7 @@ CONFIG_AX88796B_PHY=m
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_LXT_PHY is not set
 CONFIG_INTEL_XWAY_PHY=y
+CONFIG_JLSEMI_PHY=y
 # CONFIG_LSI_ET1011C_PHY is not set
 # CONFIG_MARVELL_PHY is not set
 # CONFIG_MARVELL_10G_PHY is not set
