linux (Generic): update .config for 6.10 and gcc 14.2

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -1,15 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.10.0 Kernel Configuration
+# Linux/x86 6.10.3 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="x86_64-libreelec-linux-gnu-gcc-14.1.0 (GCC) 14.1.0"
+CONFIG_CC_VERSION_TEXT="x86_64-libreelec-linux-gnu-gcc-14.2.0 (GCC) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=140100
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24200
+CONFIG_AS_VERSION=24301
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24200
+CONFIG_LD_VERSION=24301
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
@@ -4057,6 +4057,7 @@ CONFIG_DVB_BUDGET_CI=m
 CONFIG_DVB_BUDGET_AV=m
 CONFIG_VIDEO_IPU3_CIO2=m
 # CONFIG_VIDEO_INTEL_IPU6 is not set
+# CONFIG_INTEL_VSC is not set
 # CONFIG_IPU_BRIDGE is not set
 CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
