--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -2625,7 +2625,7 @@ CONFIG_MT7663U=m
 # CONFIG_MT7663S is not set
 CONFIG_MT7915E=m
 CONFIG_MT7921_COMMON=m
-# CONFIG_MT7921E is not set
+CONFIG_MT7921E=m
 # CONFIG_MT7921S is not set
 CONFIG_MT7921U=m
 # CONFIG_MT7996E is not set
